--- a/Marwaita X Red/general/cinnamon-light.css
+++ b/Marwaita X Red/general/cinnamon-light.css
@@ -204,14 +204,13 @@ StButton:checked.radiobutton,
 #panel,
 .grouped-window-list-badge,
 .sound-player-overlay
-{background-color: rgba(255,255,255, 0.8); /*use base color transparent*/}
+,
 
 #notification,
 .menu #notification,
 .menu
-{background-color: #fff; /*use base color*/}
+,/*use base color*/
 
-.menu-favorites-box,
 .popup-combo-menu,
 .modal-dialog,
 .switcher-list,
@@ -230,10 +229,11 @@ StButton:checked.radiobutton,
 .window-close:checked,
 .overview-empty-placeholder,
 .grouped-window-list-thumbnail-menu
-{background-color: #eee5e5; /*use bg color*/}
+{background-color: #ffffff; /*use bg color*/}
 
 StEntry,
 StButton,
+.menu-favorites-box,
 .window-close,
 .window-close:active,
 .window-close:checked,
@@ -247,7 +247,7 @@ StButton:hover,
 #notification StButton.notification-icon-button,
 .popup-menu #notification StButton.notification-button,
 .popup-menu #notification StButton.notification-icon-button
-{ background-color: #d1c4c4; /*use button color*/}
+{ background-color: #fdefef; /*use button color*/}
 
 StButton:active,
 StButton:checked,
@@ -273,7 +273,7 @@ StButton:checked,
 #notification StButton.notification-icon-button:checked,
 .popup-menu #notification StButton.notification-button:checked,
 .popup-menu #notification StButton.notification-icon-button:checked
-{ background-color: #a28b8b; /*use button active color*/}
+{ background-color: #eadcdc; /*use button active color*/}
 
 .popup-menu-item:active,
 .popup-submenu-menu-item:open,
@@ -306,7 +306,7 @@ StButton:checked,
 .panel-bottom .grouped-window-list-item-box:focus:hover,
 .panel-bottom .grouped-window-list-item-box:active:focus,
 .panel-bottom .grouped-window-list-item-box:active:focus:hover
-{ box-shadow: inset 0 -3px #e33232;}
+{ box-shadow: inset 0 -3px #303030;}
 
 .panel-top .window-list-item-box:focus,
 .panel-top .window-list-item-box:focus:hover,
@@ -316,7 +316,7 @@ StButton:checked,
 .panel-top .grouped-window-list-item-box:focus:hover,
 .panel-top .grouped-window-list-item-box:active:focus,
 .panel-top .grouped-window-list-item-box:active:focus:hover
-{ box-shadow: inset 0 3px #e33232;}
+{ box-shadow: inset 0 3px #303030;}
 
 .panel-right .window-list-item-box:focus,
 .panel-right .window-list-item-box:focus:hover,
@@ -326,7 +326,7 @@ StButton:checked,
 .panel-right .grouped-window-list-item-box:focus:hover,
 .panel-right .grouped-window-list-item-box:active:focus,
 .panel-right .grouped-window-list-item-box:active:focus:hover
-{ box-shadow: inset -3px 0 #e33232;}
+{ box-shadow: inset -3px 0 #303030;}
 
 .panel-left .window-list-item-box:focus,
 .panel-left .window-list-item-box:focus:hover,
@@ -336,7 +336,7 @@ StButton:checked,
 .panel-left .grouped-window-list-item-box:focus:hover,
 .panel-left .grouped-window-list-item-box:active:focus,
 .panel-left .grouped-window-list-item-box:active:focus:hover
-{ box-shadow: inset 3px 0 #e33232;}
+{ box-shadow: inset 3px 0 #303030;}
 
 .window-list-item-box,
 .grouped-window-list-item-box:active { background-color: rgba(0,0/**/,0, 0.01);}
@@ -380,6 +380,9 @@ StButton:checked,
 .menu #notification
 {box-shadow: 0 0 0 1px rgba(0,0,0, 0.2);}
 
+.popup-menu-item:active
+{box-shadow: inset 0 0 0 1px rgba(0,0,0, 0.1);}
+
 .expo-background{border: none;}
 
 StButton,
@@ -399,7 +402,11 @@ StEntry,
 .menu,
 #notification,
 #Tooltip,
-.window-caption
+.window-caption,
+#notification StButton.notification-button,
+#notification StButton.notification-icon-button,
+.popup-menu #notification StButton.notification-button,
+.popup-menu #notification StButton.notification-icon-button
 {border: 1px solid;}
 
 .menu-selected-app-box,
@@ -408,6 +415,8 @@ StEntry,
 .panel-left{border-right: 1px solid;}
 .panel-right{border-left: 1px solid;}
 
+StButton,
+StEntry,
 .menu,
 .menu-favorites-box,
 .popup-combo-menu,
@@ -423,7 +432,11 @@ StEntry,
 .panel-bottom,
 .panel-top,
 .panel-left,
-.panel-right
+.panel-right,
+#notification StButton.notification-button,
+#notification StButton.notification-icon-button,
+.popup-menu #notification StButton.notification-button,
+.popup-menu #notification StButton.notification-icon-button
 {border-color: rgba(0,0,0, 0.2);}
 
 .popup-separator-menu-item,
@@ -434,12 +447,12 @@ StEntry,
 
 /* Border Radius */
 
-.popup-menu-item{ border-radius: 6px; }
+.popup-menu-item{ border-radius: 4px; }
 
-.popup-submenu-menu-item:open{ border-radius: 6px 6px 0 0 ; }
+.popup-submenu-menu-item:open{ border-radius: 4px 4px 0 0 ; }
 
 .popup-sub-menu,
-.popup-sub-menu .popup-menu-item:last-child{ border-radius: 0 0 6px 6px; }
+.popup-sub-menu .popup-menu-item:last-child{ border-radius: 0 0 4px 4px; }
 
 .popup-sub-menu .popup-menu-item,
 .expo-background
@@ -466,7 +479,7 @@ StButton,
 .calendar-event-button,
 .overview-empty-placeholder,
 .grouped-window-list-thumbnail-menu
-{border-radius: 8px;}
+{border-radius: 4px;}
 
 StScrollBar StButton{border-radius: 9999px; border-color: transparent; background-clip: border-box;}
 
